--- a/rebar.config
+++ b/rebar.config
@@ -13,7 +13,7 @@
   {etest, "", {git, "git://github.com/wooga/etest.git"}},
 
   % Mocking.
-  {meck, "0.7.2", {git, "git://github.com/eproxus/meck.git"}}
+  {meck, "0.8.2", {git, "git://github.com/eproxus/meck.git", {tag, "0.8.2"}}}
 ]}.
 
 {clean_files, ["ebin/*.beam"]}.
