Fix ibrowse git url

--- a/rebar.config
+++ b/rebar.config
@@ -7,7 +7,7 @@
 }.
 
 {deps, [
-  {ibrowse, "", {git, "git@github.com:cmullaparthi/ibrowse.git", {tag, "v4.0.2"}}},
+  {ibrowse, "", {git, "git://github.com/cmullaparthi/ibrowse.git", {tag, "v4.0.2"}}},
 
   % ETest testing framework.
   {etest, "", {git, "git://github.com/wooga/etest.git"}},
